Cambios en .cbp y .layout

--- a/TaCTi.cbp
+++ b/TaCTi.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="api.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="api.h" />
 		<Unit filename="lista.c">
 			<Option compilerVar="CC" />
 		</Unit>
